tests/NormalTests/paczka1/small_fuzzy/88036270.err
Error in line 3: fyqAU6 S836 70,22
Error in line 2: A116 S836 69,8
Error in line 10: RtO6b46Id A116 54,0
